--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -907,6 +907,7 @@ P\pd{}{x_3} = ( x_3 \vx^T \vx_k - x_{3,k}) \frac{1}{r(\vx_k - \vx)}  \pd{}{r} \p
 
 
 \subsection{Hyperviscosity $\Delta^k$ for Stabilization}
+\label{sec:hyperviscosity_operators}
 
 The hyperviscosity filter for stabilization is introduced in \cite{FornbergLehto11} and was included in our previous investigations in \cite{BolligFlyerErlebacher2012}.
 When explicitly solving hyperbolic equations, differentiation matrices encode convective operators of the form 
