--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -117,17 +117,21 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
 	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/eigs_N4096_n101_HV_k4_gamma40_color.pdf}
-	\caption{With Hyperviscosity}
+	\caption{With Hyperviscosity ($k=4$ and $\gamma_c = 40$)}
 	\label{fig:vortex_eigs_hv}
 \end{subfigure}
-\caption{Eigenvalues of $\text{diag}(\omega(\theta)) D_\lambda$ for the vortex roll-up test case for $N=4096$ nodes, stencil size $n=101$ and $\epsilon = 3.5$. Left: no hyperviscosity. Right: hyperviscosity enabled with $k=4$ and $\gamma_c = 40$. }
+\caption{Eigenvalues of $\text{diag}(\omega(\theta)) D_\lambda$ for the vortex roll-up test case for $N=4096$ nodes, stencil size $n=101$ and $\epsilon = 3.5$. }
 \label{fig:eig_vortex}
 \end{center}
 \end{figure}
 
+Figure~\ref{fig:vortex_t10} shows the initial condition for Equation~\ref{eq:vortex} and the solution at $t = 10$, on $N=10201$ nodes, with stencil size $n=50$. This resolution is sufficient to properly capture the vortices at $t=10$, but lower resolutions would suffer approximation errors associated with insufficient grid resolution. 
+For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ error convergence study presented in Figure~\ref{fig:conv_plot_vortex}. The time step $\Delta t = 0.05$ for all resolutions. 
+
+Based on Figure~\ref{fig:conv_plot_vortex_nohv}, which shows the convergence without the hyperviscosity filter on eigenvalues, we see that only one test case reflects the unstable eigenvalues present in the DM. In a stroke of luck the unstable modes are small enough that the solution at $t=3$ is not impacted, but as $t$ increases the instabilities begin to dominate. Figure~\ref{fig:conv_plot_vortex_hv} demonstrates the convergence of vortex roll-up with hyperviscosity included. The solution errors are slightly higher than Figure~\ref{fig:conv_plot_vortex_hv}, but the instabilities have vanished. 
 
 %TODO: copy data in: Users/evan/Laptop/efb06/research_2013/dsc_xpo_2013/figures/vortex/
-\begin{figure}[htbp]
+\begin{figure}
 \begin{center}
 \begin{subfigure}[b]{0.49\textwidth}
 	\centering
@@ -151,16 +155,13 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \label{fig:vortex_t10}
 \end{center}
 \end{figure}
-
-Figure~\ref{fig:vortex_t10} shows the initial condition for Equation~\ref{eq:vortex} and the solution at $t = 10$, on $N=10201$ nodes, with stencil size $n=50$. This resolution is sufficient to properly capture the vortices at $t=10$, but lower resolutions would suffer approximation errors associated with insufficient grid resolution. 
-For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ error convergence study presented in Figure~\ref{fig:conv_plot_vortex_hv}. The time step $\Delta t = 0.05$ for all resolutions. Figure~\ref{fig:conv_plot_vortex_hv} 
-
-\begin{figure}[htbp!]
+\begin{figure}
 \centering
 \begin{subfigure}[b]{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth] {../figures/paper1/figures/vortex_rollup/convergence_plot_nohv_color.pdf}
 \caption{No Hyperviscosity}
+\label{fig:conv_plot_vortex_nohv}
 \end{subfigure}
 \begin{subfigure}[b]{0.48\textwidth}
 \centering
@@ -169,7 +170,7 @@ For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ 
 \label{fig:conv_plot_vortex_hv}
 \end{subfigure}
 \caption{Convergence plot for vortex roll-up at $t=3$.}
-\label{fig:conv_plot_vortex_hv}
+\label{fig:conv_plot_vortex}
 \end{figure}
 
 % TODO: note that without stabilization the convergence works in al but one test. If the mat is unstable it is unstable. No fighting it. Use at your own risk. 
